tests/paczka2/big_fuzzy/78743171.err
Error in line 1: lO76HYIY A167 3,0
Error in line 16: 7gj A167 25,6
Error in line 26: 2hvkcCe S224 83,3
Error in line 28: XpegSOe S224 47,7
Error in line 29: 2hvkcCe S252 58,7
Error in line 34: HtYp S996 8,4
Error in line 37: 7gj S224 35,0
Error in line 42: HtYp S996 72,0
Error in line 43: HtYp S252 24,5
Error in line 40: 7gj S252 70,7
Error in line 52: 7gj S224 68,3
Error in line 58: 7gj S996 85,2
Error in line 49: HtYp S996 89,3
Error in line 68: HtYp S996 62,38
Error in line 59: lO76HYIY S252 76,6
Error in line 64: HtYp S99	 197,4
Error in line 63: LlOEYbcZ7E S996 3,3
Error in line 72: LlOEYbcZ7E S252 52,6
Error in line 71: HtYp S996 238,0
Error in line 69: lO76HYIY S996 84,9
Error in line 108: HtYp S996 90,9
Error in line 124: 7gj S252 65,8
Error in line 131: HtYp S252 83,8
Error in line 132: HtYp S224 50,9
Error in line 128: 7gj S996 42,9
Error in line 146: 7j S996 50,5
Error in line 153: HtYp S996 92,0
Error in line 149: 7gj S252 12,9
Error in line 172: lO76HYIY A167 30,8
Error in line 173: 2hvkcCe S224 82,4
Error in line 176: XpegSOe S252 26,0
Error in line 175: 2hvkcCe S252 75,4
Error in line 189: LlOEYbcZ7E S252 182,99
Error in line 174: lO76HYIY S224 37,3
Error in line 190: lO76HYIY S996 48,1
Error in line 199: XpegSOehA167h46,2
Error in line 204: 7gj S252 91,4
Error in line 192: HtYp S996 36,6
Error in line 200: XpegSOe A167 122,9
Error in line 213: 2hvkcCe S996 41,8
Error in line 212: XpegSOe S224 22,9
Error in line 207: HtYp S224 72,7
Error in line 219: XpegSOe A167 0,6
Error in line 226: lO76HYIY S996 29,8
Error in line 227: S996 S996 46,1
Error in line 232: HtYp S224 4,0
Error in line 229: S996 S252 4,2
Error in line 230: LlOEYbcZ7E S252 17,8
Error in line 235: S996 S996 87,2
